--- a/Assets/HFSM/Tests/EditMode/com.gigi.HFSM.Tests.Edit.asmdef
+++ b/Assets/HFSM/Tests/EditMode/com.gigi.HFSM.Tests.Edit.asmdef
@@ -13,7 +13,9 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "Castle.Core.dll",
+        "NSubstitute.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
