--- a/Tests/com.gigi.HFSM.Tests.asmdef
+++ b/Tests/com.gigi.HFSM.Tests.asmdef
@@ -1,17 +1,21 @@
 {
-    "name": "RuntimePlay",
+    "name": "Runtime",
     "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "gigi.HFSM.Runtime"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "Castle.Core.dll",
+        "NSubstitute.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
