--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,9 +5,9 @@
     ["@semantic-release/commit-analyzer", { "preset": "angular" }],
     "@semantic-release/release-notes-generator",
     ["@semantic-release/changelog", { "preset": "angular" }],
-    ["@semantic-release/npm", { "npmPublish": false, "pkgRoot": "Packages/com.gigi.hfsm" }],
+    ["@semantic-release/npm", { "npmPublish": false, "pkgRoot": "Assets/HFSM" }],
     ["@semantic-release/git", {
-      "assets": ["Packages/com.gigi.hfsm/package.json", "CHANGELOG.md"],
+      "assets": ["Assets/HFSM/package.json", "CHANGELOG.md"],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
     "@semantic-release/github"
