--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         fi
         git push -f -u origin upm
       env:
-        PKG_ROOT: Packages/com.gigi.hfsm
+        PKG_ROOT: Assets/HFSM
     - name: Create upm git tag
       if: steps.semantic.outputs.new_release_published == 'true'
       run: |
